Added endpoint for main menu
