# swagger.yaml
@@ -4580,6 +4580,24 @@ paths:
               schema:
                 $ref: "#/components/schemas/error"
       operationId: GetWpV2CustomTaxonomy
+  /wp/v2/mainMenu:
+    get:
+      security:
+        - cookieAuth: []
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/mainMenu"
+        default:
+          description: error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
+      operationId: GetMainMenu
   /wp/v2/treeMenu?slug={slug}:
     get:
       parameters:
@@ -6107,6 +6125,20 @@ components:
               type: boolean
           items:
             type: string
+    mainMenu:
+      type: array
+      items:
+        $ref: "#/components/schemas/menuItem"
+    menuItem:
+      type: object
+      required:
+        - "title"
+        - "link"
+      properties:
+        title:
+          type: "string"
+        link:
+          type: string
     treeMenu:
       type: object
       properties:
